# Easy-Github

./: .gitignore  README.md  electron.vite.config.ts  index.html  package-lock.json  package.json  release-build.bat  run_easygithub_build_and_start.bat  run_easygithub_dev.bat  tsconfig.app.json  tsconfig.json
.github/workflows/: build.yml
scripts/: create-updater-metadata.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: auth_commands.rs  auth_token.rs  github_api.rs  github_commands.rs  main.rs  storage.rs  store_commands.rs
src-tauri/updater/: tauri-update.key.pub
src-tauri/windows/: remove-electron-169.nsh
src/app/: App.tsx  AppProviders.tsx
src/app/components/: BeginnerGuide.tsx  BranchManager.tsx  CommandPractice.tsx  CommitHistory.tsx  FileChanges.tsx  GitHubLearningApp.tsx  GitHubManager.tsx  IssueTracker.tsx  LearningSection.tsx  ProjectOverview.tsx  PullRequestManager.tsx  RepositoryManager.tsx  WorkflowVisualizer.tsx
src/app/components/layout/: AppBrand.tsx  AppContextPanel.tsx  AppNavigation.tsx
src/app/components/ui/: accordion.tsx  badge.tsx  button.tsx  card.tsx  checkbox.tsx  dialog.tsx  (+3 more)
src/main/: index.ts
src/main/ipc/: registerIpc.ts
src/main/security/: validateSender.ts
src/main/services/: authService.ts  autoUpdate.ts  gitService.ts  githubClient.ts  githubService.ts  learningStore.ts  projectStore.ts  tokenStore.ts
src/preload/: index.ts
src/renderer/: index.html  main.tsx  tauriBridge.ts  types.d.ts
src/shared/: ipc-channels.ts
src/styles/: fonts.css  theme.css
